[gd_scene load_steps=4 format=3 uid="uid://bejo3luwlvqts"]

[ext_resource type="Script" path="res://scripts/memory_gameM.gd" id="1_hsx7i"]
[ext_resource type="Texture2D" uid="uid://c1cgl360u8vlx" path="res://assets/NeuronautasPaginas.png" id="1_o3fri"]
[ext_resource type="FontFile" uid="uid://db5j82d65e1uw" path="res://assets/fonts/ComingSoon-Regular.ttf" id="2_kutla"]

[node name="memory_gameM" type="Node2D"]
script = ExtResource("1_hsx7i")

[node name="NeuronautasPaginas" type="Sprite2D" parent="."]
position = Vector2(200, 300)
texture = ExtResource("1_o3fri")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
clip_contents = true
offset_right = 14.0
offset_bottom = 37.0
scale = Vector2(28.8054, 16.2041)
color = Color(0.0470588, 0.0392157, 0.101961, 1)

[node name="Label" type="Label" parent="."]
offset_left = 40.0
offset_top = 32.0
offset_right = 360.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("2_kutla")
text = "Observe a sequÃªncia:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 40.0
offset_top = 96.0
offset_right = 360.0
offset_bottom = 504.0
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3

[node name="GreenPad" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/GreenPad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.164706, 0.788235, 0.164706, 1)

[node name="RedPad" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/RedPad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.211765, 0.396078, 1)

[node name="YellowPad" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/YellowPad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.85098, 0.309804, 1)

[node name="BluePad" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/BluePad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.211765, 0.27451, 0.784314, 1)

[node name="OrangePad" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/OrangePad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.329412, 0.211765, 1)

[node name="CianoPad" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/CianoPad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.788235, 0.776471, 1)

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Iniciar"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Voltar"

[node name="GameTimer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/GridContainer/GreenPad" to="." method="_on_green_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/RedPad" to="." method="_on_red_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/YellowPad" to="." method="_on_yellow_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BluePad" to="." method="_on_blue_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/OrangePad" to="." method="_on_orange_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CianoPad" to="." method="_on_ciano_pad_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
